Version should use canonical file paths to determine jar file paths.
Add canonical file path method to IOUtils.
Remove StringUtils.normalize.
Cleanup VersionTest.